--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -16,7 +16,7 @@
             <div class="form-group">
                 <label for="nickname">닉네임</label>
                 <input id="nickname" type="text" th:field="*{nickname}" class="form-control"
-                       placeholder="whiteship" aria-describedby="nicknameHelp" required minlength="3" maxlength="20">
+                       placeholder="user123" aria-describedby="nicknameHelp" required minlength="3" maxlength="20">
                 <small id="nicknameHelp" class="form-text text-muted">
                     공백없이 문자와 숫자로만 3자 이상 20자 이내로 입력하세요. 가입후에 변경할 수 있습니다.
                 </small>
@@ -50,7 +50,7 @@
                 <button class="btn btn-primary btn-block" type="submit"
                         aria-describedby="submitHelp">가입하기</button>
                 <small id="submitHelp" class="form-text text-muted">
-                    <a href="#">약관</a>에 동의하시면 가입하기 버튼을 클릭하세요.
+                    <a href="#">약관</a>에 동의하시면 가입을 진행하세요.
                 </small>
             </div>
         </form>
