--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
             <h6 class="text-xl-start">배포 : AWS EC2</h6>
             <hr class="my-2">
             <h4 class="text-xl-start">추가 예정인 기능 </h4>
-            <h6 class="text-xl-start">사이트 관리자 기능</h6>
+            <h6 class="text-xl-start">사이트 관리자 기능 (일부 구현)</h6>
             <h6 class="text-xl-start">다른 사람 프로필 클릭시 정보 보기 기능</h6>
             <h6 class="text-xl-start">게시물 추천기능, 공지 기능</h6>
             <h6 class="text-xl-start">다른 게임 추가</h6>
